// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegisterSnapshotTests should render snapshot with chatWithUser 1`] = `
<div>
  <div
    className="image"
  >
    <img
      alt="profile"
      src="image.png"
    />
  </div>
  <div
    className="info"
  >
    <b>
      First Last
    </b>
    <span />
  </div>
  <button
    onClick={[Function]}
  >
    open
  </button>
</div>
`;

exports[`RegisterSnapshotTests should render snapshot with loading request 1`] = `
<div>
  <div
    className="image"
  >
    <img
      alt="profile"
      src="image.png"
    />
  </div>
  <div
    className="info"
  >
    <b>
      First Last
    </b>
    <span />
  </div>
  <button
    onClick={[Function]}
  >
    <LoadingIndicator />
  </button>
</div>
`;

exports[`RegisterSnapshotTests should render snapshot with request 1`] = `
<div>
  <div
    className="image"
  >
    <img
      alt="profile"
      src="image.png"
    />
  </div>
  <div
    className="info"
  >
    <b>
      First Last
    </b>
    <span />
  </div>
  <button
    onClick={[Function]}
  >
    send
  </button>
</div>
`;

exports[`RegisterSnapshotTests should render snapshot without request without chat 1`] = `
<div>
  <div
    className="image"
  >
    <img
      alt="profile"
      src="image.png"
    />
  </div>
  <div
    className="info"
  >
    <b>
      First Last
    </b>
    <span />
  </div>
  <button
    onClick={[Function]}
  >
    send
  </button>
</div>
`;
